--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ langchain-community==0.0.13
 langchain-core==0.1.11
 openai==1.8.0
 pandas==2.1.4
+psycopg2-binary==2.9.7
 pydantic==2.5.2
 numpy==1.26.3
 rank-bm25==0.2.2
+sqlalchemy=2.0.23
 streamlit==1.30.0
 streamlit-authenticator==0.2.3
 tiktoken==0.5.2
